--- a/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Product/Edit.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Product/Edit.cshtml
@@ -43,29 +43,29 @@
                                 <div class="d-flex justify-content-between">
                                     <div class="col-md-4">
                                         <div class="form-group">
-                                            <label asp-for="EditProductViewModel.Name" class="control-label"></label>
-                                            <input asp-for="EditProductViewModel.Name" class="form-control" />
-                                            <span asp-validation-for="EditProductViewModel.Name" class="text-danger"></span>
+                                            <label asp-for="@Model.EditProductViewModel.Name" class="control-label"></label>
+                                            <input asp-for="@Model.EditProductViewModel.Name" class="form-control" />
+                                            <span asp-validation-for="@Model.EditProductViewModel.Name" class="text-danger"></span>
                                         </div>
                                     </div>
                                     <div class="col-md-4">
                                         <div class="form-group">
-                                            <label asp-for="EditProductViewModel.Price" class="control-label"></label>
-                                            <input asp-for="EditProductViewModel.Price" class="form-control" />
-                                            <span asp-validation-for="EditProductViewModel.Price" class="text-danger"></span>
+                                            <label asp-for="@Model.EditProductViewModel.Price" class="control-label"></label>
+                                            <input asp-for="@Model.EditProductViewModel.Price" class="form-control" />
+                                            <span asp-validation-for="@Model.EditProductViewModel.Price" class="text-danger"></span>
                                         </div>
                                     </div>
                                     <div class="col-md-2 mt-4 ">
                                         <div class="icheck-primary d-inline">
-                                            <input asp-for="EditProductViewModel.IsHome" type="checkbox" checked id="checkboxSuccess1">
-                                            <label asp-for="EditProductViewModel.IsHome" for="checkboxSuccess1">
+                                            <input asp-for="@Model.EditProductViewModel.IsHome" type="checkbox" checked id="checkboxSuccess1">
+                                            <label asp-for="@Model.EditProductViewModel.IsHome" for="checkboxSuccess1">
                                             </label>
                                         </div>
                                     </div>
                                     <div class="col-md-2 mt-4 ">
                                         <div class="icheck-primary d-inline">
-                                            <input asp-for="EditProductViewModel.IsActive" type="checkbox" checked id="checkboxSuccess1">
-                                            <label asp-for="EditProductViewModel.IsActive" for="checkboxSuccess1">
+                                            <input asp-for="@Model.EditProductViewModel.IsActive" type="checkbox" checked id="checkboxSuccess1">
+                                            <label asp-for="@Model.EditProductViewModel.IsActive" for="checkboxSuccess1">
                                             </label>
                                         </div>
                                     </div>
@@ -73,9 +73,9 @@
                                 <div class="d-flex justify-content-between">
                                     <div class="col-md-4">
                                         <div class="form-group">
-                                            <label asp-for="EditProductViewModel.Url" class="control-label"></label>
-                                            <input asp-for="EditProductViewModel.Url" class="form-control" />
-                                            <span asp-validation-for="EditProductViewModel.Url" class="text-danger"></span>
+                                            <label asp-for="@Model.EditProductViewModel.Url" class="control-label"></label>
+                                            <input asp-for="@Model.EditProductViewModel.Url" class="form-control" />
+                                            <span asp-validation-for="@Model.EditProductViewModel.Url" class="text-danger"></span>
                                         </div>
                                     </div>
 
@@ -100,9 +100,9 @@
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="EditProductViewModel.Properties" class="control-label"></label>
-                                    <textarea id="Properties" asp-for="EditProductViewModel.Properties" class="form-control" rows="10"></textarea>
-                                    <span asp-validation-for="EditProductViewModel.Properties" class="text-danger"></span>
+                                    <label asp-for="@Model.EditProductViewModel.Properties" class="control-label"></label>
+                                    <textarea id="Properties" asp-for="@Model.EditProductViewModel.Properties" class="form-control" rows="10"></textarea>
+                                    <span asp-validation-for="@Model.EditProductViewModel.Properties" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
                                     <label asp-for="SubCategoryList" class="control-label"></label>
