--- a/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Authorization/Index.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Authorization/Index.cshtml
@@ -26,8 +26,9 @@
                         <th>Ad Soyad</th>
                         <th>Rol</th>
                         <th>Email</th>
-                        <th>Pasif Yap</th>
-                        <th>Yetkisini Değiştir</th>
+                        <th>Statu Değiştir</th>
+                        <th>Yetki Değiştir</th>
+                       
                     </tr>
                  </thead>
                  <tbody>
@@ -40,12 +41,16 @@
                                 <td>@user.Role</td>
                                 <td>@user.Email</td>
                                 <td>
-                                    <a asp-area="Admin"
-                                    asp-controller="Authorization"
-                                    asp-action="ChangeAsPassive"
-                                    asp-route-id="@user.Id"
-                                    class="btn btn-danger btn-sm">Pasif Yap </a>
+                                  <a asp-area="Admin"
+                                   asp-controller="Authorization"
+                                   asp-action="ChangeStatu"
+                                   asp-route-id="@user.Id"
+                                   class="btn btn-@(user.Statu ? "danger" : "success") btn-sm">
+                                                    @(user.Statu ? "Pasif Yap" : "Aktif Yap")
+                                   </a>
                                 </td>
+                                       
+
                                 <td>
                                     <a asp-area="Admin"
                                     asp-controller="Authorization"
