--- a/RhythmicRealm/RhythmicRealm.UI/Views/Shared/_Layout.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
 
 		@await Html.PartialAsync("_StylesPartial")
 		@RenderSectionAsync("Styles", false)
+	@await RenderSectionAsync("TopScripts", false)
 </head>
 <body>
 		@await Html.PartialAsync("_HeaderPartial")
@@ -16,7 +17,7 @@
 		@await Html.PartialAsync("_FooterPartial")
 		@await Html.PartialAsync("_ScriptsPartial")
 		@await Component.InvokeAsync("Notyf");
-		@await RenderSectionAsync("Scripts", false)
+	    @await RenderSectionAsync("BottomScripts", false)
 
 </body>
 </html>
