Account locking, login, and registration process is completed. Password reset and change remain

--- a/RhythmicRealm/RhythmicRealm.UI/Views/Account/ForgotPassword.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/Account/ForgotPassword.cshtml
@@ -14,7 +14,10 @@
                     Şifre yenileme bağlantısını gönderebilmemiz için e-posta adresinize ihtiyacımız var.
                 </p>
 
-                <form action="recover-password.html" method="post">
+                <form asp-area=""
+                asp-controller="Account"
+                action="ForgotPassword"
+                method="post">
                     <div class="input-group mb-3">
                         <input type="email" class="form-control" placeholder="Email">
                         <div class="input-group-append">
