Forgot password, reset password and mail confirmation  is completed. change password will be done

--- a/RhythmicRealm/RhythmicRealm.UI/Views/Account/ForgotPassword.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/Account/ForgotPassword.cshtml
@@ -2,6 +2,8 @@
     Layout = "_LoginRegisterLayout";
 }
 
+@model ForgotPasswordViewModel
+
     <div class="login-box">
         <div class="login-logo">
             <a href="~/admin/index2.html"><b>Rhythmic</b>Realm</a>
@@ -14,21 +16,20 @@
                     Şifre yenileme bağlantısını gönderebilmemiz için e-posta adresinize ihtiyacımız var.
                 </p>
 
-                <form asp-area=""
-                asp-controller="Account"
-                action="ForgotPassword"
-                method="post">
+                <form asp-area="" asp-controller="Account" asp-action="ForgotPassword"  method="post">
+                <label asp-for="Email"></label>
                     <div class="input-group mb-3">
-                        <input type="email" class="form-control" placeholder="Email">
+                        <input asp-for="Email" type="email" class="form-control">
                         <div class="input-group-append">
                             <div class="input-group-text">
                                 <span class="fas fa-envelope"></span>
                             </div>
                         </div>
                     </div>
+                <span class="text-danger" asp-validation-for="Email"></span>
                     <div class="row">
                         <div class="col-12">
-                            <button type="submit" class="btn btn-primary btn-block">Yeni Şifre Talebi</button>
+                        <button type="submit" class="btn btn-primary btn-block">Yeni Şifre Talebi</button>
                         </div>
                         <!-- /.col -->
                     </div>
