--- a/RhythmicRealm/RhythmicRealm.UI/Views/Account/ResetPassword.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/Account/ResetPassword.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     Layout = "_LoginRegisterLayout";
 }
-@model  UpdatePasswordViewModel
+@model  ResetPasswordViewModel
 
 
     <div class="login-box">
@@ -9,29 +9,29 @@
             <a href="~/admin/index2.html"><b>Rhythmic</b>Realm</a>
         </div>
         <!-- /.login-logo -->
+        <div class="text-center">
+        <p class="login-box-msg">Şifreniz en az 7 karakter olmalıdır, harf ve rakam içermelidir.</p>
+        </div>
+  
         <div class="card">
             <div class="card-body login-card-body">
-                <p class="login-box-msg">Yeni şifrenize yalnızca bir adım kaldı, şifrenizi hemen değiştirin.</p>
-
-                <form action="login.html" method="post">
+                <p class="login-box-msg">Yeni parolanızı almanıza yalnızca bir adım kaldı, parolanızı hemen değiştirin.</p>
+                <div class="text-danger" asp-validation-summary="All"></div>
+                <form asp-area="" asp-controller="Account" asp-action="ResetPassword" method="post">
+                <input type="hidden" asp-for="UserId" />
+                <input type="hidden" asp-for="TokenCode" />
+                <label asp-for="Password"></label>
                     <div class="input-group mb-3">
-                        <input type="password" class="form-control" placeholder="Eski Şifreniz">
+                        <input asp-for="Password" type="password" class="form-control" >
                         <div class="input-group-append">
                             <div class="input-group-text">
                                 <span class="fas fa-lock"></span>
                             </div>
                         </div>
                     </div>
+                    <label asp-for="RePassword"></label>
                     <div class="input-group mb-3">
-                        <input type="password" class="form-control" placeholder="Yeni Şifreniz">
-                        <div class="input-group-append">
-                            <div class="input-group-text">
-                                <span class="fas fa-lock"></span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="input-group mb-3">
-                        <input type="password" class="form-control" placeholder="Yeni Şifrenizi onaylayın">
+                        <input asp-for="RePassword" type="password" class="form-control" >
                         <div class="input-group-append">
                             <div class="input-group-text">
                                 <span class="fas fa-lock"></span>
@@ -40,17 +40,12 @@
                     </div>
                     <div class="row">
                         <div class="col-12">
-                            <button type="submit" class="btn btn-primary btn-block">Şifreyi değiştir</button>
+                            <button type="submit" class="btn btn-primary btn-block">Şifremi Yenile </button>
                         </div>
                         <!-- /.col -->
                     </div>
                 </form>
 
-                <p class="mt-3 mb-1">
-                    <a asp-area=""
-                    asp-controller="Account"
-                    asp-action="Login">Giriş</a>
-                </p>
             </div>
             <!-- /.login-card-body -->
         </div>
