User information update completed. will be done password update

--- a/RhythmicRealm/RhythmicRealm.UI/Views/Shared/_HeaderPartial.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/Shared/_HeaderPartial.cshtml
@@ -58,7 +58,7 @@
 									<ul class="dropdown-menu">
 										<li><a href="#">Siparişlerim</a></li>
 										<li role="separator" class="divider"></li>
-										<li><a href="#">Kullanıcı Bilgilerim</a></li>
+										<li><a asp-area="" asp-controller="Account" asp-action="Profile">Kullanıcı Bilgilerim</a></li>
 										<li role="separator" class="divider"></li>
 										<li><a asp-area="" asp-controller="Account" asp-action="Logout">Çıkış Yap</a></li>
 									</ul>
