password update is ok

--- a/RhythmicRealm/RhythmicRealm.UI/Views/Account/Profile.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/Account/Profile.cshtml
@@ -82,7 +82,7 @@
             <div class="card-body">
                 <h4 class="card-title text-danger">Şifre Güncelleme</h4>
                 <hr />
-                <form asp-action="UpdatePassword" asp-controller="Account" method="post">
+                    <form asp-area="" asp-controller="Account" asp-action="UpdatePassword" method="post">
          
 
                     <div class="form-group">
